testing/framework/resources/Advanced/Failing/mondrian/query5390.e
Store 22	Small Grocery	Byrg	\N	\N	\N	\N	f	9606 Julpum Loop
